Makefile: Use consistent library naming convention
Update library name to use consistent naming convention in Makefiles.
Library names are updated to ar-osal, ar-util, ar-acdb, ar-ats, ar-gsl,
ar-gpr and ar-spfhdrs.

Signed-off-by: Aditya Rathi <quic_aditrath@quicinc.com>

--- a/acdb/Makefile.am
+++ b/acdb/Makefile.am
@@ -43,10 +43,10 @@ acdb_c_sources = ./src/acdb.c \
 lib_includedir = $(includedir)
 lib_include_HEADERS = $(acdb_sources)
 
-lib_LTLIBRARIES = libacdb.la
-libacdb_la_CC = @CC@
-libacdb_la_LIBADD = -lar_osal -L$(top_builddir)/ar_osal
-libacdb_la_SOURCES = $(acdb_c_sources)
-libacdb_la_CFLAGS = $(AM_CFLAGS)
-libacdb_la_LDFLAGS = -shared -avoid-version
+lib_LTLIBRARIES = libar-acdb.la
+libar_acdb_la_CC = @CC@
+libar_acdb_la_LIBADD = -lar-osal -L$(top_builddir)/ar_osal
+libar_acdb_la_SOURCES = $(acdb_c_sources)
+libar_acdb_la_CFLAGS = $(AM_CFLAGS)
+libar_acdb_la_LDFLAGS = -shared -avoid-version
 
