--- a/acdb/ats/ats.pc.in
+++ b/acdb/ats/ats.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: ats
 Description: ats library
 Version: @VERSION@
-Libs: -L${libdir} -lats 
+Libs: -L${libdir} -lar-ats
 Cflags: -I${includedir}\ats
