--- a/ar_osal/ar_osal.pc.in
+++ b/ar_osal/ar_osal.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: ar_osal
 Description: ar osal library
 Version: @VERSION@
-Libs: -L${libdir} -lar_osal
+Libs: -L${libdir} -lar-osal
 Cflags: -I${includedir}
