--- a/ar_util/ar_util.pc.in
+++ b/ar_util/ar_util.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: ar_util
 Description: ar_util library
 Version: @VERSION@
-Libs: -L${libdir} -lar_util
+Libs: -L${libdir} -lar-util
 Cflags: -I${includedir}
