--- a/gsl/gsl.pc.in
+++ b/gsl/gsl.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: gsl
 Description: gsl library
 Version: @VERSION@
-Libs: -L${libdir} -lgsl
+Libs: -L${libdir} -lar-gsl
 Cflags: -I${includedir}
