--- a/acdb/acdb.pc.in
+++ b/acdb/acdb.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: acdb
 Description: acdb library
 Version: @VERSION@
-Libs: -L${libdir} -lacdb
+Libs: -L${libdir} -lar-acdb
 Cflags: -I${includedir}
