--- a/spf/spf.pc.in
+++ b/spf/spf.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: spf
 Description: spf library
 Version: @VERSION@
-Libs: -L${libdir} -lspfheaders
+Libs: -L${libdir} -lar-spfhdrs
 Cflags: -I${includedir}/spf -I${includedir}/spf/asps
