Makefile: Add API headers path
Updated Makefile to include ASPS and modules header files path in libar-spfhdrs
to avoid missing header file error during audioreach-pal compilation.

Signed-off-by: Sairamreddy Bojja <quic_sbojja@quicinc.com>

--- a/spf/Makefile.am
+++ b/spf/Makefile.am
@@ -128,7 +128,16 @@ spf_sources = ./api/apm/apm_api.h \
                 ./api/modules/wsa_haptics_vi_api.h \
                 ./api/modules/congestion_buf_api.h \
                 ./api/modules/jitter_buf_api.h \
-                ./api/vcpm/vcpm_api.h
+                ./api/vcpm/vcpm_api.h  \
+                ./api/modules/asr_module_calibration_api.h \
+                ./api/modules/us_tone_renderer_api.h \
+                ./api/modules/mma_api.h
+
+asps_sources =  ./api/asps/asps_ads_usecase_api.h \
+                ./api/asps/asps_upd_usecase_api.h \
+                ./api/asps/asps_acd_usecase_api.h \
+                ./api/asps/asps_acm_api.h \
+                ./api/asps/asps_us_rendering_usecase_api.h
 
 spf_includedir = $(includedir)/spf
 spf_include_HEADERS = $(spf_sources)
@@ -139,6 +148,6 @@ asps_include_HEADERS = $(asps_sources)
 #LIBRARY for LE apps
 lib_LTLIBRARIES = libar-spfhdrs.la
 libar_spfhdrs_la_CC = @CC@
-libar_spfhdrs_la_SOURCES = $(spf_sources)
+libar_spfhdrs_la_SOURCES = $(spf_sources) $(asps_sources)
 libar_spfhdrs_la_CFLAGS = $(AM_CFLAGS)
 libar_spfhdrs_la_LDFLAGS = -shared -avoid-version
